fix the text overflow in clearance and academic type text

--- a/frontend/src/components/items/styles/academictype.css
+++ b/frontend/src/components/items/styles/academictype.css
@@ -239,6 +239,9 @@ select {
   align-items: center;
   align-self: center;
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .closeIconContainer {
   display: flex;
